# simple_twitter_rest_api

./: Cargo.toml  README.md  diesel.toml
src/: like.rs  main.rs  response.rs  schema.rs  tweet.rs
