[package]
name = "simple_twitter_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
env_logger = "0.9.3"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"